fixed section padding/margin issue on IE and FF3
git-svn-id: https://fluid.surelogic.com/svn/eng/trunk/sierra-portal@7849 d02ae147-ee12-4a35-9452-91c89e8b2592

--- a/src/com/surelogic/sierra/gwt/public/styles/main.css
+++ b/src/com/surelogic/sierra/gwt/public/styles/main.css
@@ -244,7 +244,7 @@ img {
 /* Section */
 .sl-Section {
 	border-spacing: 1px;
-	margin: 3px;
+	padding: 3px;
 }
 
 .sl-Section-titlepanel {
